# NexusForge

./: .dockerignore  .env.example  .gitignore  CODEBASE_AUDIT_REPORT.md  CODE_WIKI.md  Dockerfile  PROJECT_STATUS.md  README.md  UI_REDESIGN_PLAN.md  edgeone.json  fly.toml  index.html  package-lock.json  package.json  start.py  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  打包说明.md
backend/: .env.example  alembic.ini  api_check.py  backend_entry.py  nexusforge-backend.spec  pyproject.toml  requirements-minimal.txt  requirements-nsis.txt  requirements.txt
backend/agents/: agent_engine.py  memory_compressor.py  planner.py  system_prompt.py
backend/agents/tools/: analyze_plot.py  base.py  delete_character.py  edit_paragraph.py  export_novel.py  generate_chapter.py  manage_foreshadows.py  polish_content.py  query_bible.py  query_characters.py  registry.py  review_chapter.py
backend/alembic/: env.py
backend/application/ai_invocation/: __init__.py  models.py  service.py
backend/application/audit/: anti_ai_guard.py  (+9 more)
backend/config/: defaults.py  genre_pack_loader.py  logging.py  settings.py
backend/domain/: agent.py  chapter.py  chapter_status.py  character.py  foreshadow.py  novel.py  review.py  review_task.py  world_setting.py
backend/infrastructure/: crypto.py  validators.py
backend/interfaces/: container.py  dependencies.py  main.py
backend/migrations/: 001_initial_schema.py  002_add_character_gender_age.py  003_add_snapshot_content.py  004_fts5_search.py  005_add_novel_style_tags_perspective.py  006_add_review_tasks.py  007_fix_fts5_triggers.py  008_add_dag_tables.py  009_add_governance_tables.py  010_add_checkpoint_tables.py  011_add_ai_invocation_tables.py  012_add_novel_extras.py
backend/tests/: conftest.py  test_aftermath_pipeline.py  test_aftermath_steps.py  test_agent_api.py  test_agent_engine.py  test_agent_max_tool_calls.py  test_agent_parallel_tools.py  test_agent_tools.py  test_ai_invocation_service.py  test_audit_feedback.py  test_autonomous_writer.py  test_base_story_pipeline.py  test_chapter_ai_suggest.py  test_chapter_service.py  test_chapter_status.py  test_checkpoint_service.py  test_context_builder_vectors.py  test_conversation_repo.py  test_dag_service.py  test_engine_daemon.py  test_export_service.py  test_function_calling.py  test_generation_pipeline.py  test_generation_pipeline_aftermath.py  test_genre_pack_loader.py  test_governance_service.py  test_integration.py  test_llm_client_tools.py  test_memory_compression.py  test_memory_engine.py  test_migration_008_011.py  test_migration_chain.py  test_new_api_endpoints.py  test_no_orphan_aftermath.py  test_pipeline.py  test_planner.py  test_planner_advanced.py  test_prompt_registry.py  test_qa_verification_t01_t04.py  test_quality_guards.py  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+383 files in other folders)
